# wookie-books

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api_tests/: conftest.py
api_tests/services/: test_auth.py  test_books.py
contrib/data_migrations/: 0001-initial.sql
contrib/migrations/: 0001-initial.sql  0002-add-data.sql
src/app/: main.py
src/app/api/: config.py  database.py  deps.py  routes.py
src/app/models/: book.py  user.py
src/app/repositories/: books.py  users.py
src/app/repositories/tables/: books.py  users.py
src/app/schemas/: auth.py  books.py
src/app/services/: auth.py  books.py  ping.py
tests/: conftest.py  test_auth.py
tests/services/: test_books.py
