[tool.poetry]
name = "wookie-books"
version = "0.1.0"
description = "A bookstore rest API"
authors = ["Daniel Baskal <daniel.baskal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
databases = {extras = ["aiosqlite"], version = "^0.6.0"}
python-jose = {extras = ["cryptograpy"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
